--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -16,7 +16,8 @@
     "expres": "^0.0.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "next": "^13.4.19"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
